# spectrum-classifier

./: .gitattributes  .gitignore  .vercelignore  Dockerfile  Readme.md  bun.lockb  fly.toml  hello.py  model.joblib  observablehq.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  spectrum_classifier.joblib  vercel.json
.next/: trace
datasets/training-labfiles/: label description.txt
datasets/validation2-labfiles/: A3225_single_1800gr_0.21mm_1000.00ms__183852_label#2.dat.txt  A3225_single_1800gr_0.21mm_1000.00ms__183909_label#2.dat.txt  A3225_single_1800gr_0.21mm_1000.00ms__183924.dat.txt  A3225_single_1800gr_0.21mm_1000.00ms__183937_label#4.dat.txt  A3225_single_1800gr_0.21mm_1000.00ms__183947_label#1.dat.txt  A3225_single_1800gr_0.21mm_1000.00ms__183957_label#1.dat.txt  A3225_single_1800gr_0.21mm_1000.00ms__184014_label#3.dat.txt  A3225_single_1800gr_0.21mm_1000ms__185710_label#4.dat.txt  A3225_single_1800gr_0.21mm_1000ms__185755_label#2.dat.txt  A3225_single_1800gr_0.21mm_1000ms__185819_label#2.dat.txt  A3225_single_1800gr_0.21mm_1000ms__185851_label#2.dat.txt  A3225_single_1800gr_0.21mm_1000ms__190007_label#2.dat.txt  (+11 more)
ml/: api.py  convert.py  train.py  validate.py
models/: model-1.joblib  model.joblib
public/: docs.html  index.html
reports/: archive-feature-extraction.md  feature-extraction.md  index.md
src/: api.py  app.py  cli.py  convert-training.py  convert-validation.py  convert.py  docs.md  extract.py  extract_features.py  index.md  spectrum_utils.py  train.py  type_defs.py  validate.py
(+4 files in other folders)
