[project]
name = "spectrum-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytorch-lightning>=2.5.0.post0",
    "pywavelets>=1.8.0",
    "pyyaml>=6.0.2",
    "ruff>=0.8.2",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "tdqm>=0.0.1",
    "torch>=2.5.1",
    "typer>=0.15.1",
]
