[project]
name = "spectrum-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "joblib>=1.4.2",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "skl2onnx>=1.18.0",
]
